- Refactored kamehouse system commands to go through kamehouse-shell for most commands